--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "latest",
-    "@docusaurus/preset-classic": "latest",
-    "@mdx-js/react": "^1.6.22",
+    "@docusaurus/core": "3.7.0",
+    "@docusaurus/preset-classic": "3.7.0",
+    "@mdx-js/react": "3.1.0",
     "@vercel/analytics": "^1.0.0",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
@@ -24,7 +24,7 @@
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "latest"
+    "@docusaurus/module-type-aliases": "3.7.0"
   },
   "browserslist": {
     "production": [
